--- a/papers/pfds/chapter05.tex
+++ b/papers/pfds/chapter05.tex
@@ -213,11 +213,11 @@ $\Phi(d_j) \ge \Phi(d_0)$, так что, как и требуется, теку
 
 \end{comment}
 
-\section{Очереди}
+\section{Чисто функциональные очереди и их амортизация}
 \label{sc:5.2}
 
 
-\begin{frame}[fragile]{}
+\begin{frame}[fragile]{Чисто функциональные очереди}
 
 \begin{minipage}{.4\textwidth}
   \inputminted[firstline=5,lastline=11] {haskell}{code/Queue.lhs}
@@ -258,7 +258,7 @@ snoc (f,r) x = (f, x : r)
 \end{frame}
 
 
-\begin{frame}[fragile]{}
+\begin{frame}[fragile]{Инвариант очереди}
 Элементы добавляются к \hsinline{r} и убираются из \hsinline{f}, так
 что они должны как-то переезжать из одного списка в другой. Этот
 переезд осуществляется путем обращения \hsinline{r} и установки его
@@ -280,12 +280,12 @@ snoc (f,r) x = (f, x : r)
 \end{frame}
 
 
-\begin{frame}[fragile]{}
+\begin{frame}[fragile]{Добавление и удаление из очереди}
 \begin{minted}{haskell}
-snoc (([], _), x) = ([x], [])
-snoc (( f, r), x) = (f,  x :: r)
-tail ([x], r) = (rev r, [])
-tail (x:f, r) = (f, r)
+snoc ( [], _) x = ([x], [])
+snoc (  f, r) x = (f,  x :: r)
+tail ([x], r)   = (rev r, [])
+tail (x:f, r)   = (f, r)
 \end{minted}
 
 Заметим, что в первой ветке \hsinline{snoc} используется
@@ -308,7 +308,7 @@ wildcard. В этом случае поле \hsinline{r} проверять не
 Функции
 \hsinline{snoc} и \hsinline{head} всегда завершаются за время
 $O(1)$, но \hsinline{tail} в худшем случае отнимает $O(n)$
-времени. 
+времени. \\
 
 Однако, используя либо метод банкира, либо метод физика, мы
 можем показать, что как \hsinline{snoc}, так и \hsinline{tail}
@@ -333,7 +333,7 @@ $O(1)$, но \hsinline{tail} в худшем случае отнимает $O(n)
 амортизированную стоимость 1. \\
 
 Наконец, вызов \hsinline{tail},
-обращающий хвостовой список, занимает $m+1$ реальный шаг, где $m$~---
+обращающий хвостовой список, занимает $(m+1)$ реальных шагов, где $m$~---
 длина хвостового списка, и тратит $m$ единиц кредита, содержащиеся в
 этом списке, так что амортизированная стоимость получается $m + 1 - m
 = 1$.
@@ -354,22 +354,42 @@ $O(1)$, но \hsinline{tail} в худшем случае отнимает $O(n)
 потенциал, так что амортизированная стоимость равна одному.\\
 
  Наконец,
-вызов \hsinline{tail} с обращением очереди занимает $m+1$ реальный
-шаг, но при этом устанавливает хвостовой список равным \hsinline{[]},
+вызов \hsinline{tail} с обращением очереди занимает $(m+1)$ реальных
+шагов, но при этом устанавливает хвостовой список равным \hsinline{[]},
 уменьшая таким образом потенциал на $m$, так что амортизированная
 стоимость равна $m + 1 - m = 1$.
 
 \end{frame}
 
+\begin{frame}[fragile]{Вывод}
 
-\begin{frame}[fragile]{}
+У чисто функциональной очереди функция \hsinline{tail} за $O(n)$ в худшем случае и за $O(1)$ амортизированного.\\
+
 \begin{hint}
   Эта реализация очередей идеальна в приложениях, где не требуется
   устойчивости и где приемлемы амортизированные показатели
   производительности.
 \end{hint}
 
+Если совместить ленивые вычисления и амортизированные методы, то можно получить устойчивые очереди с хорошими амортизированными характеристиками.
 \end{frame}
+
+\begin{frame}[fragile]{Ленивые вычисления (очень кратко)}
+Можно представлять число списком цифр. Тогда сложение будет работать за $O(n)$ из-за переносов.\\
+
+А ещё можно представить с помощью ленивого варианта списка
+(так называемый \term{поток}{stream}). Как он будет проводить сложение?
+\begin{itemize}
+  \item Вычислит младший разряд за $O(1)$
+  \item Вычисления остальных разрядов проведет потом, если они понадобятся
+\end{itemize}\vspace{.5cm}
+
+N.B. Оценивать сложность алгоритмов в присутствие ленивых вычислений очень сложно.\\
+
+N.B. В языке Haskell \emph{все} вычисления по умолчанию такие.
+
+\end{frame}
+
 
 \ifanswers
 \begin{frame}[fragile]{}
@@ -393,7 +413,7 @@ $O(1)$, но \hsinline{tail} в худшем случае отнимает $O(n)
 \end{frame}
 \fi
 
-\section{Биномиальные кучи}
+\section{Биномиальные кучи и амортизация}
 \label{sc:5.3}
 
 
@@ -420,26 +440,28 @@ $O(1)$, но \hsinline{tail} в худшем случае отнимает $O(n)
 \end{frame}
 
 
-\begin{frame}[fragile]{}
+\begin{frame}[fragile]{Можно доказать, что \hsinline{merge} и \hsinline{deleteMin} работают за $O(\log n)$}
 Для полноты картины нам нужно показать, что амортизированная стоимость
 операций \hsinline{merge} и \hsinline{deleteMin} по-прежнему
-составляет $O(\log n)$. \hsinline{deleteMin} не доставляет здесь
-никаких трудностей, но в случае \hsinline{merge} требуется небольшое
-расширение метода физика. \\
+составляет $O(\log n)$.\\
 
-До сих пор мы определяли амортизированную
-стоимость операции как
-$$
-a = t + \Phi(d_{\mbox{\textit{вых}}}) - \Phi(d_{\mbox{\textit{вх}}})
-$$
-где $d_{\mbox{\textit{вх}}}$~--- структура на входе операции, а $d_{\mbox{\textit{вых}}}$~---
-структура на выходе. Однако если операция принимает либо возвращает
-более одного объекта, это определение требуется обобщить до
-$$
-a = t + \sum_{d \in \mbox{\textit{Вых}}} \Phi(d) - \sum_{d \in \mbox{\textit{Вх}}} \Phi(d)
-$$
-где $\mbox{\textit{Вх}}$~--- множество входов, а $\mbox{\textit{Вых}}$~--- множество выходов. В этом
-правиле мы рассматриваем только входы и выходы анализируемого типа.
+ \hsinline{deleteMin} не доставляет здесь
+никаких трудностей, но в случае \hsinline{merge} требуется небольшое
+расширение метода физика (нужно учесть, что операции могут возвращать больше одного объекта). \\
+
+%До сих пор мы определяли амортизированную
+%стоимость операции как
+%$$
+%a = t + \Phi(d_{\mbox{\textit{вых}}}) - \Phi(d_{\mbox{\textit{вх}}})
+%$$
+%где $d_{\mbox{\textit{вх}}}$~--- структура на входе операции, а $d_{\mbox{\textit{вых}}}$~---
+%структура на выходе. Однако если операция принимает либо возвращает
+%более одного объекта, это определение требуется обобщить до
+%$$
+%a = t + \sum_{d \in \mbox{\textit{Вых}}} \Phi(d) - \sum_{d \in \mbox{\textit{Вх}}} \Phi(d)
+%$$
+%где $\mbox{\textit{Вх}}$~--- множество входов, а $\mbox{\textit{Вых}}$~--- множество выходов. В этом
+%правиле мы рассматриваем только входы и выходы анализируемого типа.
 \end{frame}
 
 \ifanswers
@@ -452,7 +474,7 @@ $$
 \fi
 
 
-\section{Расширяющиеся кучи}
+\section{Расширяющиеся (splay) кучи}
 \label{sc:5.4}
 
 \begin{frame}{\term{Расширяющиеся деревья}{splay trees}}
@@ -467,8 +489,8 @@ $$
 Вместо этого каждая операция перестраивает дерево при помощи
 некоторых простых преобразований, которые имеют тенденцию увеличивать
 сбалансированность. Несмотря на то, что каждая конкретная операция
-может занимать до $O(n)$ времени, амортизированная стоимость ее, как
-мы покажем, не превышает $O(\log n)$.
+может занимать до $O(n)$ времени, можно показать, что 
+амортизированная стоимость ее не превышает $O(\log n)$.
 \end{frame}
 
 
@@ -727,3 +749,4 @@ TODO
 \end{frame}
 
 \end{comment}
+
