FP2019: desc of hw about C langauge

--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -10,29 +10,29 @@
 
 Переход на link:index.html[главную страницу курса]
 
-== Задачки для Скалолазов
+// == Задачки для Скалолазов
 
-Дополнительные, так как у них слишком короткий курс на Степике. Если надо будет ещё задачек -- напишите.
+// Дополнительные, так как у них слишком короткий курс на Степике. Если надо будет ещё задачек -- напишите.
 
-=== Алгоритм DPLL
+// === Алгоритм DPLL
 
-Задача из мира математической логики про выполнимость формулы языка высказываний. В том году давал на экзамен. Сейчас хочу сам алгоритм с какими-нибудь оптимизациями (например, hash consing).
+// Задача из мира математической логики про выполнимость формулы языка высказываний. В том году давал на экзамен. Сейчас хочу сам алгоритм с какими-нибудь оптимизациями (например, hash consing).
 
-Сам алгоритм должен довольно легко гуглиться.
+// Сам алгоритм должен довольно легко гуглиться.
 
-=== Окологеймерская
+// === Окологеймерская
 
-Запустить моделирование мира, где персонажи что-то делают и куда-то стремятся.
+// Запустить моделирование мира, где персонажи что-то делают и куда-то стремятся.
 
-NOTE: Детали обсуждаемы потом
+// NOTE: Детали обсуждаемы потом
 
-=== Задача про верификацию и триплеты Хоара
+// === Задача про верификацию и триплеты Хоара
 
-Фиксировано AST языка программирования с числами, условиями, присваиваниями и циклами. Программы аннотированы триплетами Хоара. Проверить, что аннотированы корректно.
+// Фиксировано AST языка программирования с числами, условиями, присваиваниями и циклами. Программы аннотированы триплетами Хоара. Проверить, что аннотированы корректно.
 
-Про триплеты Хоара по-русски можно читать, например, в книжке Герасимова "Математическая логика".
+// Про триплеты Хоара по-русски можно читать, например, в книжке Герасимова "Математическая логика".
 
-Выбравшему эту задачу можно упростить себе жизнь, выбрав правильный вариант домашки.
+// Выбравшему эту задачу можно упростить себе жизнь, выбрав правильный вариант домашки.
 
 [[hw1234]]
 == Домашки 1-4
@@ -57,6 +57,7 @@ Haskell), то это нужно предварительно согласова
 Если кто-то хочет подусложнить задачу и решать одну и ту же на одном и том же языке _вдвоем_, то можно также обсудить.
 
 Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).
+Засылать готовые решения надо с помощью merge request в https://gitlab.com/Kakadu/haskell-course2019-hw[этот репозиторий].
 
 [[lua]]
 === Lua (Цириков)
@@ -273,10 +274,20 @@ LISP известен своими встроенными макросами. П
 Наверное, тут тоже можно парочку.
 
 [[C]]
-=== Cи
+=== Cи (Шапошников)
 
-Интерпретатор языка с поддержкой арфиметики указателей. Наверное будет несложно сделать, есть куча проектов в
-интернетике про реализацию минималистичного компилятора Си в несколько сотен строчек.
+Как обычно, нужно поддержать основные конструкции языка: числа, строки (массивы чисел), ветвления, цикл
+`while` и по желанию `for`, объявления и вызов функций.
+
+Из Си-специфичного: массивы произвольной длины. Можете черпать вдохновение из минималистичного компилятора.
+Не надо пока делать:
+
+. Объявления структур
+. Числа отличные от `int` и HEX представление
+. Хитрые методы инициализации структур/массивов.
+
+Скорее всего будет подзадача про трансляцию этого мини-языка в x86 ассемблер (для простых функций `fibonacci` и `memcpy` это должно быть очень просто). Скорее всего будет полезно пообщаться с человеком, который решает задачу про assembler.
+
 
 [[asm]]
 === Assembler
