FP2019: desc of hw about C langauge

--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -279,7 +279,7 @@ LISP известен своими встроенными макросами. П
 Как обычно, нужно поддержать основные конструкции языка: числа, строки (массивы чисел), ветвления, цикл
 `while` и по желанию `for`, объявления и вызов функций.
 
-Из Си-специфичного: массивы произвольной длины. Можете черпать вдохновение из минималистичного компилятора.
+Из Си-специфичного: массивы произвольной длины. Можете черпать вдохновение из https://bellard.org/tcc/[минималистичного компилятора].
 Не надо пока делать:
 
 . Объявления структур
