FP2019: desc of hw about Datalog langauge

--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -301,8 +301,21 @@ LISP известен своими встроенными макросами. П
 [[datalog]]
 === Datalog
 
-Простейший представитель логического программирования. Спека должна быть легко находима
-в интернетах
+Простейший представитель логического программирования, подмножество Prolog. Итого там должны быть
+
+. Предикаты
+. *Произвольные* функциональные символы запрещены, хотя разрешается иметь захардкоженное количество функциаональных символов в программе
+. Переменные
+. Правила вывода новых фактов (a.k.a. Хорн клозы (Horn clauses))
+. Способ задания базы данных известных фактов (a.k.a. аксимом)
+
+Итого, программа состоит из "базы данных" фактов и запроса,  а интерпретатор
+проверяет согласованность запроса с базой данных и говорит "да" или "нет". Из-за наложенных ограничений
+процесс поиска всегда завершится.
+
+Простейшей программой будет проверка чисел в стиле Пеано на четность/нечетность
+(https://www.cs.cmu.edu/~fp/courses/15317-f17/lectures/18-datalog.pdf[страницы 2-3]).
+Ну или поиск пути в графе (http://pages.cs.wisc.edu/~paris/cs784-s17/lectures/lecture7.pdf[страницы 1-2]).
 
 [[nfa]]
 === NFA (Дулетов)
