--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -236,42 +236,25 @@ AST делаете вместе, из языково-специфичных фи
 а также подергать оттуда тестовых примеров.
 
 [[haskell]]
-=== Haskell (1-2 человека)
+=== Haskell (Канашин + Смирнов)
 
 Числа, списки, функции, ленивая стратегия вычислений. Без пользовательских типов данных. В качестве пункта 4 --
-хитрые оптимизации. Алгоритм вывода типов пока не включаю, но написать
+хитрые оптимизации. Алгоритм вывода типов склоее всегл писать придется, так как вас двое. Написать
 http://okmij.org/ftp/ML/generalization.html[_эффективный_] (почти линейный) алгоритм вывода типов может быть
 [.line-through]#сложной# интересной задачей.
 
-Тут легко можно договориться на 2 человека.
+Из первых программ для тестирования нужны факториал и фибоначчи. Потом придется разобраться как применять
+Scott (или кто там ещё) encoding, чтобы эмулировать индуктивные типы данных, которые в миниязык не добавлены.
+Скорее всего будет ещё добавлено CPS преобразование программ и какие-то Haskell-специфичные оптимизации
+(вот https://www.microsoft.com/en-us/research/uploads/prod/2019/03/eta.pdf[пример]).
+
 
 [[lisp]]
-=== LISP
+=== LISP (Гордиенко)
 
 LISP известен своими встроенными макросами. Посмотрите примерный синтаксис Scheme (или Common Lisp, и т.д.)
 и напишите интерпретатор, который по дороге дает объявлять и использовать макросы. Вдруг у вас получатся
 гигиенические?
-
-=== Scala (1-2 человека)
-
-Функции, числа и прочий стандартный набор фич. Специфичная для Scala часть языка -- traits. Вообще, чтобы сделать это правильно там нужно прикручивать движок перебора с возвратами a la Datalog.
-
-Наверное, можно притянуть на 2х человек, если алгоритм под капотом будет годный.
-
-=== OCaml with objects (2 человека)
-
-Числа, списки, присваивание, объекты и их рекурсивные методы вместо рекурсивных функций.
-Наверное, единственный язык, где ООП сделано нормально (за счет структурной типизации и
-так называемого row-полиморфизма).
-
-Думаю, что тут проще всего будет меня уговорить назначить на двоих.
-
-=== OCaml/Haskell with GADT (2 человека)
-
-Числа, функции и обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов для паттерн-мэтчинга
-с использованием GADT.
-
-Наверное, тут тоже можно парочку.
 
 [[C]]
 === Cи (Шапошников)
@@ -290,7 +273,7 @@ LISP известен своими встроенными макросами. П
 
 
 [[asm]]
-=== Assembler
+=== Assembler (Суханова)
 
 Выберите вид ассемблера, который хорошо работает на вашем компьютере/процессоре и почитайте
 виды регистров в данной архитектуре. Реализуйте интерпретатор. Преобразование программ из
@@ -299,7 +282,7 @@ LISP известен своими встроенными макросами. П
 вообще будет круто.
 
 [[datalog]]
-=== Datalog
+=== Datalog (Логунов)
 
 Простейший представитель логического программирования, подмножество Prolog. Итого там должны быть
 
@@ -325,15 +308,12 @@ LISP известен своими встроенными макросами. П
 может быть graphviz?)
 В качестве №4 будет конвертация в детерминирванный или что-то подобное.
 
-=== Extended Regexps
+[[promela]]
+=== Promela (Лунёв)
 
-
-
-[[refal]]
-=== РеФаЛ
-
-Отечественный язык программирования. Вдохновения черпать
-https://github.com/bmstu-iu9/refal-5-lambda[отсюда].
+Входной язык для утилиты верификации https://en.wikipedia.org/wiki/Promela[Promela]. Думаю, что все
+фичи описаны в http://www.lacl.fr/dima/melo/spin.pdf[слайдах]. Весь "язык" компилируется (с помощью `pan`) в
+конечный автомат, который умеет моделировать в том числе параллельные потоки. Короче, надо написать интерпретатор программ Promela, там в слайдах есть примеры, за одно разберетесь с примитивами синхронизации параллельных потоков.
 
 [[forth]]
 === Forth (Ахметьянов)
@@ -341,12 +321,31 @@ https://github.com/bmstu-iu9/refal-5-lambda[отсюда].
 Так называемый стековый язык программирования, мало похож на всё остальное. Считается
 языком с легко расширяемым синтаксисом.
 
-[[promela]]
-=== Promela (Лунёв)
+[[ocaml_oop]]
+=== OCaml with objects (Гамаонов)
 
-Входной язык для утилиты верификации https://en.wikipedia.org/wiki/Promela[Promela]. Думаю, что все
-фичи описаны в http://www.lacl.fr/dima/melo/spin.pdf[слайдах]. Весь "язык" компилируется (с помощью `pan`) в
-конечный автомат, который умеет моделировать в том числе параллельные потоки. Короче, надо написать интерпретатор программ Promela, там в слайдах есть примеры, за одно разберетесь с примитивами синхронизации параллельных потоков.
+Наверное, единственный язык, где ООП сделано нормально (за счет структурной типизации и
+так называемого row-полиморфизма).
+
+Подробнее:
+
+. Числа, списки, строки и операции над ними
+. Объекты и их рекурсивные методы вместо рекурсивных функций, поля объектов (мутабельные или нет)
+. Ветвления, first class functions
+. Создание (так называемых immediate) объектов, вызов методов, проверка до исполнения, что метод есть (другими словами -- проверка типов)
+. Классы и наследование поддерживать не обязательно
+
+Ещё подробнее прочиать и посмотреть какие-нибудь примеры программ и синтаксиса можно
+https://ocaml.org/learn/tutorials/objects.html[тут],
+https://caml.inria.fr/pub/docs/manual-ocaml/objectexamples.html[тут] или
+https://dev.realworldocaml.org/objects.html[тут].
+
+
+[[refal]]
+=== РеФаЛ (Малец)
+
+Отечественный язык программирования. Вдохновения черпать
+https://github.com/bmstu-iu9/refal-5-lambda[отсюда].
 
 [[yacc]]
 === YACC
@@ -381,7 +380,20 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]
 Вот https://people.mpi-sws.org/~viktor/wmc/operational.pdf[это] будет хорошей ссылкой, если уметь разбираться
 в исчислениях (я планирую про это как-то рассказывать).
 
+=== Extended Regexps
 
+=== OCaml/Haskell with GADT (2 человека)
+
+Числа, функции и обобщенные алгебраические типы данных, паттерн-матчинг, проверка типов для паттерн-мэтчинга
+с использованием GADT.
+
+Наверное, тут тоже можно парочку.
+
+=== Scala (1-2 человека)
+
+Функции, числа и прочий стандартный набор фич. Специфичная для Scala часть языка -- traits. Вообще, чтобы сделать это правильно там нужно прикручивать движок перебора с возвратами a la Datalog.
+
+Наверное, можно притянуть на 2х человек, если алгоритм под капотом будет годный.
 
 [[hw5]]
 == Домашки №5
