--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -146,9 +146,23 @@ link:02.pdf[Слайды про алгебру типов]
 Неделя 5 (10 октября)
 ---------------------
 
+[[week7]]
+Неделя 6 (17 октября)
+---------------------
 
+link:03.pdf[Слайды про лямбда исчисление]
 
+[[week8]]
+Неделя 7 (24 октября)
+---------------------
 
+Продолжение про лямбда исчисление
+
+[[week9]]
+Неделя 8 (31 октября)
+---------------------
+
+link:04monads.pdf[Слайды про монады]
 
 
 
