--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -165,6 +165,13 @@ link:03.pdf[Слайды про лямбда исчисление]
 link:04monads.pdf[Слайды про монады]
 
 
+[[week10]]
+Неделя 9 (07 ноября)
+---------------------
+
+link:05gadt.pdf[Слайды про GADT]
+
+
 
 [[questions]]
 Теоретические вопросы к экзамену 2018 (предыдущего) года
